syntax = "proto3";

option csharp_namespace = "ApartmentsApi.Proto";

package ApartmentApi;

message ApartmentRequest{
	int32 id = 1;
}

message ApartmentResponse{
	int32 id = 1;
	bool Parking =2;
	int32 Reception =3;
	int32 Kitchens =4;
	int32 Bathrooms =5;
	int32 Area =6;
	string View =7;
	int32 Floor=8;
	int32 Flat=9;
	string City=10;
	string Region=11;
	string Adresse=12;
	double Price=13;
	bool Installment=14;
	int32 OwnerId=15;
	int32 BedroomId =16;
	int32 CountryId =17;
	int32 FurnitureId =18;	
	int32 PeriodId =19;	
	string Purpose =20;	
	GrpcBedrooms Bedroom =21;
	GrpcCountries Country =22;
	GrpcFurnishings Furniture =23;
	GrpcPeriods Period =24;
}

message GrpcBedrooms{
	int32 id =1;
	string BedroomsCount =2;
}

message GrpcCountries{
	int32 id =1;
	string Country =2;
}

message GrpcFurnishings{
	int32 id =1;
	string FurnitureType = 2;
}

message GrpcPeriods{
	int32 id =1;
	string Period =2;
}

service ApartmentData {
  rpc GetApartmentById (ApartmentRequest) returns (ApartmentResponse) {}  
}